Actually fix flair spacing lul

--- a/style.css
+++ b/style.css
@@ -201,6 +201,8 @@
 	color: #0094FF !important; /* TODO: separate :visited color */
 }
 .linkflair-anniversary .linkflairlabel {
+	margin: 0;
+	padding: 0;
 	display: inline;
 	background: none;
 	border: none;
@@ -208,7 +210,7 @@
 	color: inherit;
 }
 .linkflair-anniversary .linkflairlabel:before { content: "[" }
-.linkflair-anniversary .linkflairlabel:after { content: "]" }
+.linkflair-anniversary .linkflairlabel:after { content: "] " }
 
 /**** STOP EDITING HERE ****/
 
